# -Ai-Workspace

./: .gitignore  PostgreSQL&Label_Studio_overview.drawio  README.md  compose.yml  overview.drawio
Assignment3/backend/: .env.example  pyproject.toml  worker_settings.py
Assignment3/backend/core/: config.py
Assignment3/backend/sandbox/: enqueue_job.py  test_label_studio.py  test_postgres.py  test_settings.py
